# lib/admin/adminRoute.js
@@ -34,4 +34,30 @@ adminRouter.route("/activeUser/:id")
     adminService.activeUser(req, res) 
 })
 
+adminRouter.route("/countMaleUserData")
+.get([validate.verifyToken],(req,res) =>{
+    adminService.countMaleUserData(req,res)
+})
+
+adminRouter.route("/countFemaleUserData")
+.get([validate.verifyToken],(req,res) =>{
+    adminService.countFemaleUserData(req,res)
+})
+
+adminRouter.route("/addAboutusPage/:id")
+.post([validate.verifyToken],(req,res) =>{
+    adminService.addAboutusPage(req,res)
+})
+
+adminRouter.route("/updateAboutusPage/:id")
+.put([validate.verifyToken], (req, res) => { 
+    adminService.updateAboutusPage(req, res) 
+})
+
+adminRouter.route("/getAboutusPage")
+.get([validate.verifyToken],(req,res) => {
+    adminService.getAboutusPage(req,res)
+})
+
+// adminRouter.route("/edit")
 module.exports= adminRouter;
